--- a/clientes/src/main/resources/application.properties
+++ b/clientes/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=5555
+server.port=8010
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -9,3 +9,9 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.datasource.url=jdbc:h2:mem:testdb
+
+
+
+########################
+#mensajes de cuentas
+conflictoId = Error al guardar el usuario, ya que ya existe un usuario con ese Rut.
