--- a/clientes/build.gradle
+++ b/clientes/build.gradle
@@ -28,6 +28,10 @@ dependencies {
 	testImplementation 'org.codehaus.groovy:groovy-all:2.4.0'
 	testImplementation "org.spockframework:spock-core:1.0-groovy-2.4"
 
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
 }
 
 test {
