--- a/clientes/src/main/resources/application.properties
+++ b/clientes/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.url=jdbc:h2:mem:testdb
 ########################
 #mensajes de cuentas
 conflictoId = Error al guardar el usuario, ya que ya existe un usuario con ese Rut.
+
+#variable que es mi secreto y debería estar en un Vault
+mySecretKey = mySecretKey
